--- a/translations/en_US.yml
+++ b/translations/en_US.yml
@@ -6,4 +6,4 @@ t._applicationtypemeters: " applicationTypeMeters"
 t.a_loss_gain_share_starting_on_this_date_already_exists: "A loss/gain share starting on this date already exists"
 t.a_mine_already_exists_with_that_name_please_use_a_unique_name_for_your_new_training_mine: "A mine already exists with that name. please use a unique name for your new training mine."
 t.ad_hoc_issues_report: "Ad hoc issues report"
-y.test_key: "This is a test key"
+y.test_key: "This is a test key. "
