--- a/translations/sv-SE.yml
+++ b/translations/sv-SE.yml
@@ -1,7 +1,4 @@
 # translations/sv-SE.yml
 t._: " "
+t._adhoctooldiscardlogs: " adHocToolDiscardLogs"
 t._applicationtypemeters: "Applikationtypmätare"
-t._circuitstockforms: "ircuitStockForm"
-t._discardphotos: "DiscardPhotos"
-t._circuitstocklogs: "ircuitStockLog"
-t._dailyproductiondatalogs: "DailyProductionDatalogs"
