--- a/translations/en_US.yml
+++ b/translations/en_US.yml
@@ -1,4 +1,5 @@
 # translations/en_US.yml
 t._: " "
 t._adhoctooldiscardlogs: " adHocToolDiscardLogs"
+t._circuitstocklogs: " circuitStockLogs"
 t._applicationtypemeters: " applicationTypeMeters"
