--- a/translations/en_US.yml
+++ b/translations/en_US.yml
@@ -3,3 +3,4 @@ t._: " "
 t._adhoctooldiscardlogs: " adHocToolDiscardLogs"
 t._applicationtypemeters: " applicationTypeMeters"
 t._circuitstocklogs: " circuitStockLogs"
+t._circuitstockforms: " circuitStockForms"
