--- a/translations/pt-BR.yml
+++ b/translations/pt-BR.yml
@@ -2,3 +2,4 @@
 t._: " "
 t._adhoctooldiscardlogs: " adHocToolDiscardLogs"
 t._applicationtypemeters: "Medidores de tipo de aplicativo"
+t._typemeters: "de tipo de aplicativo"
