--- a/translations/en_US.yml
+++ b/translations/en_US.yml
@@ -4,3 +4,4 @@ t._adhoctooldiscardlogs: " adHocToolDiscardLogs"
 t._applicationtypemeters: " applicationTypeMeters"
 t._circuitstockforms: " circuitStockForms"
 t._circuitstocklogs: " circuitStockLogs"
+t._typemeters: "meter"
