--- a/translations/en_US.yml
+++ b/translations/en_US.yml
@@ -5,4 +5,5 @@ t._applicationtypemeters: " applicationTypeMeters"
 t._circuitstockforms: " circuitStockForms"
 t._circuitstocklogs: " circuitStockLogs"
 t._typemeters: "meter"
+t.ztypemeters: "zmeter"
 t.atypemeters: "ameter"
