--- a/translations/fr.yml
+++ b/translations/fr.yml
@@ -4,5 +4,5 @@ t._adhoctooldiscardlogs: " adHocToolDiscardLogs"
 t._applicationtypemeters: " Compteurs de types d'applications "
 t._circuitstockforms: " circuitStockForms"
 t._circuitstocklogs: " circuitStockLogs"
-t._typemeters: "meter"
+t.qtypemeterrr: "meterrr"
 t.atypemeters: "ameter"
